--- a/parcel/parcel/index.html
+++ b/parcel/parcel/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/index.scss">
 </head>
+
 <body>
-    <h1>Hello world</h1>
+    <header class="header">
+        <div class="container">
+            <nav class="header__nav">
+                <div class="header__left__menu">
+                    <a href="#" class="header__link">
+                        <img src="./images/Frame.svg">
+                    </a>
+                    <ul class="header__list">
+                        <li class="header__list"><a href="#" class="header__link">Product</a></li>
+                        <li class="header__list"><a href="#" class="header__link">Features</a></li>
+                        <li class="header__list"><a href="#" class="header__link">Pricing</a></li>
+                        <li class="header__list"><a href="#" class="header__link">Case studies</a></li>
+                        <li class="header__list"><a href="#" class="header__link">Resources</a></li>
+                    </ul>
+                </div>
+                <div class="header__right__menu">
+                    <a href="#" class="btn">Log in</a>
+                    <a href="#" class="btn">Try it free</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+
 </body>
+
 </html>
