--- a/parcel/parcel/index.html
+++ b/parcel/parcel/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://db.onlinewebfonts.com/c/575fc498ad34ad0f411e618dad9ed36a?family=Graphik+LC+Web+Regular"
+        rel="stylesheet">
+    <title>Localise</title>
     <link rel="stylesheet" href="./styles/index.scss">
 </head>
 
