--- a/parcel/parcel/index.html
+++ b/parcel/parcel/index.html
@@ -8,6 +8,7 @@
         rel="stylesheet">
     <title>Localise</title>
     <link rel="stylesheet" href="./styles/index.scss">
+    <link rel="stylesheet" href="script.js">
 </head>
 
 <body>
@@ -37,8 +38,9 @@
                     </ul>
                 </div>
                 <div class="header__right__menu">
-                    <a href="#" class="btn">Log in</a>
-                    <a href="#" class="btn  btn--color">Try it free</a>
+                    <a href="#" class="btn btn--burger">Log in</a>
+                    <a href="#" class="btn btn--burger btn--color">Try it free</a>
+                    <img class="hamburger" src="./images/Hamburger.svg" alt="#">
                 </div>
             </nav>
         </div>
@@ -92,7 +94,7 @@
                         what and when.</p>
                     <a href="#" class="photo__section__link">Start now</a>
                 </div>
-                <div class="photo__section__img">
+                <div class="photo__section__img--block">
                     <img src="./images/process.png" alt="" class="photo__section__img">
                 </div>
             </div>
@@ -109,7 +111,7 @@
                         design is ready. No more idle waiting.</p>
                     <a href="#" class="photo__section__link">Start now</a>
                 </div>
-                <div class="photo__section__img ">
+                <div class="photo__section__img--block ">
                     <img src="./images/market.png" alt="" class="photo__section__img">
                 </div>
             </div>
@@ -127,7 +129,7 @@
                         context and use the in-context editors for instant previews.</p>
                     <a href="#" class="photo__section__link">Start now</a>
                 </div>
-                <div class="photo__section__img ">
+                <div class="photo__section__img--block ">
                     <img src="./images/quality.png" alt="" class="photo__section__img">
                 </div>
             </div>
@@ -144,7 +146,7 @@
                         GitHub, Bitbucket, JIRA, and more.</p>
                     <a href="#" class="photo__section__link">Start now</a>
                 </div>
-                <div class="photo__section__img">
+                <div class="photo__section__img--block">
                     <img src="./images/developer.png" alt="" class="photo__section__img">
                 </div>
             </div>
@@ -234,7 +236,7 @@
         </div>
     </section>
     <section class="localization">
-        <div class="container">
+        <div class="container localization--adaptive">
             <h2 class="localization__title">Boost your localization team’s productivity tenfold</h2>
             <div class="localization__wraper">
                 <article class="localization__article">
